# turbofault

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: cnn1d.yaml  gru.yaml  lstm.yaml  random_forest.yaml  ridge.yaml  transformer.yaml  xgboost_baseline.yaml
notebooks/: 01_eda_and_baselines.ipynb
tests/: conftest.py  test_cli.py  test_dataset.py  test_explainer.py  test_features.py  test_models.py  test_preprocessing.py
turbofault/: __init__.py  cli.py
turbofault/data/: __init__.py  dataset.py  features.py  preprocessing.py
turbofault/explain/: __init__.py  feature_explainer.py
turbofault/models/: __init__.py  cnn1d.py  lstm.py  transformer.py  xgboost_baseline.py
turbofault/training/: __init__.py  evaluation.py  hp_search.py  trainer.py
turbofault/visualization/: __init__.py  plots.py
